# trainaspower

./: .gitignore  README.md  config.yaml.example  finalsurge.py  main.py  models.py  pyproject.toml  stryd.py  trainasone.py  trainaspower.spec  workout.py
.github/workflows/: release.yml
trainaspower/: __init__.py  finalsurge.py  main.py  models.py  stryd.py  trainasone.py
