[tool.poetry]
name = "trainaspower"
version = "0.7.2"
description = "Convert TrainAsOne plans to power and upload to Final Surge for use with Stryd pod."
authors = ["Chase Sterling <chase.sterling@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
requests-html = "^0.10.0"
dateparser = "^0.7.6"
PyYAML = "^5.3.1"
loguru = "^0.5.3"
Pint = "^0.16.1"
pydantic = {url = "https://files.pythonhosted.org/packages/24/5d/7be779647b54cef0398fe4f7e7da45f083afe7f7b2ee5afa6b4d6a1caf04/pydantic-1.7.2.tar.gz"}

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"

[tool.poetry.scripts]
trainaspower = "trainaspower.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
