[tool.poetry]
name = "trainaspower"
version = "0.7.7"
description = "Convert TrainAsOne plans to power and upload to Final Surge for use with Stryd pod."
authors = ["Chase Sterling <chase.sterling@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.14"
requests = "^2.27"
lxml-html-clean = "^0.4.1"
requests-html = "^0.10.0"
dateparser = "^1.1.1"
PyYAML = "^6.0"
loguru = "^0.6.0"
Pint = "^0.18"
pydantic = "^1.9"
fitparse = "^1.2.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^6.12"

[tool.poetry.scripts]
trainaspower = "trainaspower.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
